--- a/Mucunguzi_portfolio.html
+++ b/Mucunguzi_portfolio.html
@@ -3,219 +3,67 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mucunguzi Godfrey's Portfolio</title>
-  <style>
-    /* General Styles */
-    body {
-      font-family: 'Arial', sans-serif;
-      line-height: 1.6;
-      margin: 0;
-      padding: 0;
-      background-color: #f9f9f9;
-      color: #333;
-    }
+  <title style="text-align: center;">Mucunguzi Godfrey's Portfolio</title>
+  <link rel="stylesheet" href="style.css">
 
-    a {
-      color: #000000; /* Changed to black */
-      text-decoration: none;
-    }
-
-    a:hover {
-      text-decoration: underline;
-    }
-
-    /* Header Styles */
-    header {
-      background-color: #000000; /* Changed to black */
-      color: white;
-      padding: 40px 20px;
-      text-align: center;
-    }
-
-    header h1 {
-      margin: 0;
-      font-size: 2.5rem;
-    }
-
-    header p {
-      font-size: 1.2rem;
-      margin: 10px 0 0;
-    }
-
-    /* Container Styles */
-    .container {
-      max-width: 800px;
-      margin: 20px auto;
-      padding: 20px;
-      background: white;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-      border-radius: 8px;
-    }
-
-    /* Profile Picture Styles */
-    .round-frame {
-      width: 200px;
-      height: 200px;
-      border-radius: 50%;
-      overflow: hidden;
-      border: 5px solid #000000; /* Changed to black */
-      margin: 20px auto;
-    }
-
-    .round-frame img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-    }
-
-    /* Section Heading Styles */
-    h2 {
-      color: #000000; /* Changed to black */
-      margin-top: 20px;
-      font-size: 2rem;
-      border-bottom: 2px solid #000000; /* Changed to black */
-      padding-bottom: 5px;
-    }
-
-    /* Personal Details Styles */
-    ul {
-      list-style-type: none;
-      padding: 0;
-    }
-
-    ul li {
-      background: #f2f2f2;
-      margin: 10px 0;
-      padding: 10px;
-      border-radius: 5px;
-    }
-
-    ul li strong {
-      color: #000000; /* Changed to black */
-    }
-
-    /* Video Styles */
-    video {
-      width: 100%;
-      max-width: 600px;
-      height: auto;
-      display: block;
-      margin: 20px auto;
-      border-radius: 8px;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    }
-
-    /* Table Styles */
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      margin-bottom: 20px;
-    }
-
-    th, td {
-      border: 1px solid #ddd;
-      padding: 10px;
-      text-align: left;
-    }
-
-    th {
-      background-color: #000000; /* Changed to black */
-      color: white;
-    }
-
-    tr:nth-child(even) {
-      background-color: #f9f9f9;
-    }
-
-    tr:hover {
-      background-color: #f1f1f1;
-    }
-
-    /* Links Section Styles */
-    .links-section {
-      margin-top: 20px;
-    }
-
-    .links-section ul {
-      padding-left: 20px;
-    }
-
-    .links-section ul li {
-      background: none;
-      padding: 5px 0;
-    }
-
-    /* Footer Styles */
-    footer {
-      background-color: #000000; /* Changed to black */
-      color: white;
-      text-align: center;
-      padding: 20px 0;
-      margin-top: 20px;
-    }
-
-    footer p {
-      margin: 0;
-      font-size: 1rem;
-    }
-
-    footer a {
-      color: white;
-      margin: 0 10px;
-    }
-
-    footer a:hover {
-      text-decoration: underline;
-    }
-  </style>
 </head>
 <body>
 
   <!-- Header Section -->
   <header>
-    <h1>Welcome to Mucunguzi Godfrey's Portfolio</h1>
-    <p>Second-Year Computer Science Student | Uganda Christian University</p>
+    <h1>👋👋Welcome to Mucunguzi Godfrey's Portfolio</h1>
+    <p>
+      I am a passionate second-year Computer Science student at Uganda Christian University, with a keen interest in <em>technology, hiking, sharing the gospel of our Lord Jesus Christ, and  sports</em>. 
+      Beyond academics, I am actively involved in ministry, sharing God's word in schools and providing counseling to young people.
+    </p>
   </header>
+  <section>
+    <!--Personal Details-->
+    <h2>Personal Details</h2>
+    <ul>
+      <strong>Full Name:</strong> Mucunguzi Godfrey
+      <br>
+      <strong>RegNo:</strong> M23B23/025
+      <br>
+      <strong>AccessNo :</strong>B20722
+      <br>
+      <strong>Course and Year:</strong>Bacheol's of Science in Computer Science, Year 2
+      <br>
+      <strong>Hobbies and Interests:</strong> Technology,Hiking, Ministry, sports(football)
+    </ul>
+  </section>
 
   <!-- Main Content -->
   <div class="container">
     <!-- About Me Section -->
     <section>
-      <h2>About Me</h2>
+      <h2>Profile Photo</h2>
       <div class="round-frame">
-        <img src="image.jpg" alt="Profile Picture">
+        <img src="photo1.png" alt="Profile Picture">
       </div>
-      <p>
-        I am a passionate second-year Computer Science student at Uganda Christian University, with a keen interest in <em>technology, fashion, and entertainment trends</em>. 
-        Beyond academics, I am actively involved in ministry, sharing God's word in schools and providing counseling to young people.
-      </p>
+     
     </section>
 
-    <!-- Personal Details Section -->
-    <section>
-      <h2>Personal Details</h2>
-      <ul>
-        <li><strong>Full Name:</strong> Mucunguzi Godfrey</li>
-        <li><strong>Student ID:</strong> [Your Student ID]</li>
-        <li><strong>Course and Year:</strong> Computer Science, Year 2</li>
-        <li><strong>Hobbies and Interests:</strong> Technology, Fashion, Ministry, Counseling</li>
-      </ul>
-    </section>
+  
 
     <!-- Video Section -->
     <section>
       <h2>My Best Hobby</h2>
       <p>Here's a video showcasing my favorite hobby:</p>
-      <video controls>
-        <source src="https://youtu.be/n5HkhZoU0l0" type="video/mp4">
-        Your browser does not support the video tag.
-      </video>
+      <p>My hobby is hiking. I enjoy it because it's an adventurous activity that combines exercise, exploration, and relaxation.</p>
+      <div class="video-container">
+        <video controls poster="video-thumbnail.jpg">
+            <source src="hobbies.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+    </div>
+    
     </section>
 
     <!-- Results Table Section -->
     <section>
       <h2>Year 1 Semester 1 Results</h2>
-      <table>
+      <table border="1">
         <thead>
           <tr>
             <th>Course Code</th>
@@ -277,21 +125,27 @@
       <h2>Useful Links</h2>
       <p>Check out some of my favorite resources:</p>
       <ul>
-        <li><a href="https://www.w3schools.com/" target="_blank">W3Schools</a> - My favorite learning platform.</li>
-        <li><a href="https://cse.ucu.ac.ug/" target="_blank">UCU Computing Website</a> - Official UCU Computing Department site.</li>
+        <a href="https://www.w3schools.com/" target="_blank">W3Schools</a> - My favorite learning platform.
+        <br>
+        <a href="https://cse.ucu.ac.ug/" target="_blank">UCU Computing Website</a> - Official UCU Computing Department site.
       </ul>
     </section>
   </div>
 
   <!-- Footer Section -->
   <footer>
-    <p>Contact Information</p>
-    <p>Email: <a href="mailto:mucugodf.39@gmail.com">mucugodf.39@gmail.com</a></p>
-    <div>
-      <a href="https://x.com/MucunguziG52201" target="_blank">X (Twitter)</a> | 
-      <a href="https://www.linkedin.com/in/mucunguzi-godfrey" target="_blank">LinkedIn</a>
+    <h2>Contact Information</h2>
+    <div class="social-icons">
+        <a href="mailto:mucugodf.39@gmail.com" class="Gmail-icon">
+            <i class="fa-solid fa-envelope"></i> 
+        </a>
+        <a href="https://x.com/MucunguziG52201" target="_blank"><i class="fa-brands fa-x-twitter"></i></a>
+        <a href="https://www.linkedin.com/in/mucunguzi-godfrey" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+        <a href="https://github.com/MucunguziGodfrey" target="_blank"><i class="fa-brands fa-github"></i></a>
     </div>
-  </footer>
+</footer>
+
+
 
 </body>
 </html>
