--- a/index.html
+++ b/index.html
@@ -2,16 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>First Document</title>
-    <link rel=""stylesheet" href="="style.css">
-    <script src="first.js" type= "text/javascript"></script>
+    <title>To Do List</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<h1>This is Heading 1</h1>  
-<h2>This is Heading 2</h2>
-<h4>This is Heading 4</h4>
-<p>This is my frist HTML Document</p>
+    <div class="coontainer">
+        <h2>To-Do List</h2>
+        <input type="text" id="taskInput" placeholder="Enter a task..." name="">
+        <button onclick="addTask()">Add Task</button>
+        <ul id="taskList"></ul>
+    </div>
+    <script src="action.js"></script>
 </body>
 </html>
