--- a/index.html
+++ b/index.html
@@ -3,16 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>To Do List</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Login and Register Form</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="coontainer">
-        <h2>To-Do List</h2>
-        <input type="text" id="taskInput" placeholder="Enter a task..." name="">
-        <button onclick="addTask()">Add Task</button>
-        <ul id="taskList"></ul>
+    
+    <div class="form-container">
+        <h2>Login</h2>
+        <form>
+            <div class="form-group">
+                <label for="username">Username</label>
+                <input type="text" name="username">
+            </div>
+            <div class="form-group">
+                <label for="password">Password</label>
+                <input type="password" name="password" id="password">
+                <button type="button" id="togglePassword" class="toggle-btn">📭</button>
+            </div>
+            <button type="submit" class="btn">Login</button>
+        </form>
+        <div class="divider">OR</div>
+        <h2>Register</h2>
+        <form>
+            <div class="form-group">
+                <label for="email">Email:</label>
+                <input type="email" name="email">
+            </div>
+            <div class="form-group">
+                <label for="new-password">New Password</label>
+                <input type="new-password" name="new-password">
+            </div>
+            <div class="form-group">
+                <label for="confirm-password">Confirm Password</label>
+                <input type="confirm-password" name="confirm-password">
+            </div>
+            <button type="submit" class="btn">Register</button>
+        </form>
     </div>
-    <script src="action.js"></script>
+
 </body>
+<script src="action.js"></script>
 </html>
